<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/authorInfoToast"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="8dp"
    android:background="@color/graphite">

    <TextView
        android:id="@+id/autorName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/authorName"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/speciality"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/speciality"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/group"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="20sp"/>
</LinearLayout>