<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/gray">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/baseText"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="20sp" />

        <Button
            android:id="@+id/AuthorInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/authorInf" />

        <Button
            android:id="@+id/myGoals"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/myGoals" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>